--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 (2020).
 <a href=/publication/lamp/>Optimal monetary and fiscal policy with limited asset markets participation and government debt</a>.
 Working Paper.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/pdf/paper_paulo.pdf target=_blank rel=noopener>PDF</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"><span>Paulo da Fonseca</span></span>
+<span class="article-metadata li-cite-author"><span class=author-highlighted>Paulo da Fonseca</span></span>
 (2020).
 <a href=/publication/strategic-interactions/>Strategic fiscal and monetary interactions in the Brazilian economy</a>.
 Working Paper.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/pdf/strategic_interactions.pdf target=_blank rel=noopener>PDF</a></p></div><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
