deploy: 2de886cdfe9e9528ede62a53407f8962b496a800

--- a/publication/index.html
+++ b/publication/index.html
@@ -6,7 +6,7 @@ Conference paper</option><option value=.pubtype-3>
 Preprint</option></select></div><div class=col-auto><select class="pub-filters form-control form-control-sm" data-filter-group=year><option value=*>Date</option><option value=.year-2020>
 2020</option><option value=.year-2013>
 2013</option></select></div></div><div id=container-publications><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"><span>Paulo da Fonseca</span></span>
+<span class="article-metadata li-cite-author"><span class=author-highlighted>Paulo da Fonseca</span></span>
 (2020).
 <a href=/publication/lamp/>Optimal monetary and fiscal policy with limited asset markets participation and government debt</a>.
 Working Paper.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/pdf/paper_paulo.pdf target=_blank rel=noopener>PDF</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
@@ -14,7 +14,7 @@ Working Paper.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=
 (2020).
 <a href=/publication/strategic-interactions/>Strategic fiscal and monetary interactions in the Brazilian economy</a>.
 Working Paper.<p><a class="btn btn-outline-primary btn-page-header btn-sm" href=/pdf/strategic_interactions.pdf target=_blank rel=noopener>PDF</a></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-3 year-2020"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author"><span>Paulo da Fonseca</span></span>
+<span class="article-metadata li-cite-author"><span class=author-highlighted>Paulo da Fonseca</span></span>
 (2020).
 <a href=/publication/inflation_conservatism/>Strategic interactions, inflation conservatism and the level of government debt - A nonlinear analysis</a>.
 Working Paper.<p></p></div></div><div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2013"><div class="pub-list-item view-citation" style=margin-bottom:1rem><i class="far fa-file-alt pub-icon" aria-hidden=true></i>
